// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Styled Components BaseButton - basic render: correct styles 1`] = `
Object {
  ":disabled": Object {
    "backgroundColor": "$theme.colors.buttonDisabledFill",
    "color": "$theme.colors.buttonDisabledText",
    "cursor": "not-allowed",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "cursor": "pointer",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "center",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "pointerEvents": "initial",
  "position": "relative",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - basic render: correct styles 2`] = `
Object {
  ":disabled": Object {
    "backgroundColor": "$theme.colors.buttonDisabledFill",
    "color": "$theme.colors.buttonDisabledText",
    "cursor": "not-allowed",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "cursor": "pointer",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "center",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "pointerEvents": "initial",
  "position": "relative",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - basic render: correct styles 3`] = `
Object {
  ":disabled": Object {
    "backgroundColor": "$theme.colors.buttonDisabledFill",
    "color": "$theme.colors.buttonDisabledText",
    "cursor": "not-allowed",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "cursor": "pointer",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "center",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "pointerEvents": "initial",
  "position": "relative",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components EndEnhancer - basic render: correct styles 1`] = `
Object {
  "display": "flex",
  "marginLeft": "$theme.sizing.scale500",
}
`;

exports[`Button Styled Components StartEnhancer - basic render: correct styles 1`] = `
Object {
  "display": "flex",
  "marginRight": "$theme.sizing.scale500",
}
`;

exports[`Button Styled Components getStyleForKind minimal and loading false 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#F7F7F7",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#F7F7F7",
  },
  "backgroundColor": "transparent",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForKind minimal and loading true 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  "backgroundColor": "transparent",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForKind primary and loading false 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#123D90",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#174EB6",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#174EB6",
  },
  "backgroundColor": "#276EF1",
  "color": "#FFFFFF",
}
`;

exports[`Button Styled Components getStyleForKind primary and loading true 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#123D90",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#123D90",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#123D90",
  },
  "backgroundColor": "#276EF1",
  "color": "#FFFFFF",
}
`;

exports[`Button Styled Components getStyleForKind secondary and loading false 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#9CBCF8",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#D2E0FC",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#D2E0FC",
  },
  "backgroundColor": "#EDF3FE",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForKind secondary and loading true 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#9CBCF8",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#9CBCF8",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#9CBCF8",
  },
  "backgroundColor": "#EDF3FE",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForKind tertiary and loading false 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#CCCCCC",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#E5E5E5",
  },
  "backgroundColor": "#F7F7F7",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForKind tertiary and loading true 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "#CCCCCC",
  },
  ":focus:enabled": Object {
    "backgroundColor": "#CCCCCC",
  },
  ":hover:enabled": Object {
    "backgroundColor": "#CCCCCC",
  },
  "backgroundColor": "#F7F7F7",
  "color": "#276EF1",
}
`;

exports[`Button Styled Components getStyleForShape default compact 1`] = `
Object {
  "paddingBottom": "6px",
  "paddingLeft": "16px",
  "paddingRight": "16px",
  "paddingTop": "6px",
}
`;

exports[`Button Styled Components getStyleForShape default default 1`] = `
Object {
  "paddingBottom": "8px",
  "paddingLeft": "16px",
  "paddingRight": "16px",
  "paddingTop": "8px",
}
`;

exports[`Button Styled Components getStyleForShape round compact 1`] = `
Object {
  "paddingBottom": "10px",
  "paddingLeft": "10px",
  "paddingRight": "10px",
  "paddingTop": "10px",
}
`;

exports[`Button Styled Components getStyleForShape round default 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "12px",
  "paddingRight": "12px",
  "paddingTop": "12px",
}
`;

exports[`Button Styled Components getStyleForShape square compact 1`] = `
Object {
  "paddingBottom": "10px",
  "paddingLeft": "10px",
  "paddingRight": "10px",
  "paddingTop": "10px",
}
`;

exports[`Button Styled Components getStyleForShape square default 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "12px",
  "paddingRight": "12px",
  "paddingTop": "12px",
}
`;
